# mcp-server-shioaji

./: README.md  pyproject.toml
src/mcp_server_shioaji/: __init__.py  server.py
